<resources>
    <string name="app_name">Cycle Time</string>
    <string name="button_start">Start</string>
    <string name="button_pause">Pause</string>
    <string name="button_resume">Resume</string>
    <string name="button_stop">Stop</string>
    <string name="button_reset">Reset</string>
    <string name="name_employee">EMPLOYEE</string>
    <string name="name_process">PROCESS</string>
    <string name="name_machine">WORKPLACE</string>
    <string name="name_part_number">PRODUCT</string>
    <string name="qty_parts">QUANTITY</string>
    <string name="not_entered">Touch for choose</string>
    <string name="employees_fragment">Employees fragment</string>
    <string name="choose_employee">Choose employee</string>
    <string name="choose_process">Choose process</string>
    <string name="choose_machine">Choose workplace</string>
    <string name="choose_part">Choose product</string>
    <string name="input_number">Please input...</string>
    <string name="action_calc_title">Calculate</string>
    <string name="no_data">No data</string>
    <string name="stopwatch_result">TOTAL TIME</string>
    <string name="cycle_time_result">CYCLE TIME</string>
    <string name="stopwatch_result_title">Trial result</string>
    <string name="action_mail_send">Send...</string>
    <string name="no_email_app">No email app on this device</string>
    <string-array name="main_drawer_array">
        <item>Stopwatch</item>
        <item>Employees</item>
        <item>Processes</item>
        <item>Workplaces</item>
        <item>Products</item>
    </string-array>
    <string name="processes_fragment">Processes fragment</string>
    <string name="machines_fragment">Workplaces fragment</string>
    <string name="parts_fragment">Products fragment</string>
    <string name="employees_fragment_title">Employees</string>
    <string name="stopwatch_fragment_title">Stopwatch</string>
    <string name="processes_fragment_title">Processes</string>
    <string name="machines_fragment_title">Workplaces</string>
    <string name="parts_fragment_title">Products</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_header_title">CYCLE TIME STOPWATCH</string>
    <string name="nav_header_text">Time management tool</string>
    <string name="nav_menu_stopwatch">Stopwatch</string>
    <string name="nav_menu_employees">Employees</string>
    <string name="nav_menu_processes">Processes</string>
    <string name="nav_menu_machines">Workplaces</string>
    <string name="nav_menu_parts">Products</string>
    <string name="add">Add</string>
    <string name="add_employee">Add employee</string>
    <string name="dialog_button_ok">Ok</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="hint_add_employee">Input employee name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="dialog_sure_delete">
        Deleting is irreversible!\n
        Are you sure to delete?</string>
    <string name="dialog_delete_ok">Delete anyway</string>
    <string name="dialog_delete_cancel">Cancel</string>
    <string name="dialog_no_data">You didn\'t put anything</string>
    <string name="edit_employee">Edit employee</string>
    <string name="add_process">Add process</string>
    <string name="edit_process">Edit process</string>
    <string name="hint_add_process">Input process name</string>
    <string name="hint_add_machine">Input machine name</string>
    <string name="add_machine">Add workplace</string>
    <string name="edit_machine">Edit workplace</string>
    <string name="add_part">Add product</string>
    <string name="edit_part">Edit product</string>
    <string name="switch_show_item_text">Show</string>
    <string name="text_on">on</string>
    <string name="text_off">off</string>
    <string name="show_hidden">Show all</string>
    <string name="action_sample_save">Save</string>
    <string name="quantity_not_number">Quantity should be an integer</string>
    <string name="quantity_less_than_one">Quantity should be more than zero</string>
    <string name="no_stopwatch_result">No stopwatch result</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_menu_samples">Trials</string>
    <string name="card_sample_employee_title">EMPLOYEE</string>
    <string name="card_sample_process_title">PROCESS</string>
    <string name="card_sample_machine_title">WORKPLACE</string>
    <string name="card_sample_part_title">PRODUCT</string>
    <string name="sample_cycletime_title">CYCLE TIME</string>
    <string name="save_successful">Saved</string>
    <string name="save_unsuccessful">Was not saved</string>
    <string name="deleting_unsuccessful">Deleting unsuccessful</string>
    <string name="deleting_successful">Deleted</string>
    <string name="sample_fragment_title">Trials</string>
    <string name="sort">Sort</string>
    <string name="hint_add_part">Please add part</string>
    <string name="e_mail_addresses">E-MAIL</string>
    <string name="hint_input_email">Please input e-mails devided by \";\"</string>
</resources>
