<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ResultMeasurementActivity">
    <item
        android:id="@+id/action_mail"
        android:title="@string/action_mail_send"
        android:icon="@drawable/sent_white"
        android:orderInCategory="10"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_save"
        android:title="@string/action_sample_save"
        android:icon="@drawable/ic_save_white_48dp"
        android:orderInCategory="20"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/result_action_setting"
        android:title="@string/action_settings"
        android:orderInCategory="30"
        app:showAsAction="ifRoom|withText"/>
</menu>